--- a/Bloco III/Fundamentos Web/Exercicios160621/contato.html
+++ b/Bloco III/Fundamentos Web/Exercicios160621/contato.html
@@ -1,41 +1,68 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Contato</title>
 </head>
+
 <body>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="contato.html">Contato</a></li>
-    </ul>
+    <header>
+        <ul id="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>
+    </header>
 
-    <h1>Entre em contato comigo</h1>
-    <form>
-        <label for="nome">Nome</label>
-        <input type="text" id="nome">
-       <br>
-       <br>
-       <br>
-        <label for="email">Email</label>
-        <input type="email" id="email">
-        <br>
-        <br>
-        <br>
-        <label for="assunto">Assunto</label>
-        <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
-        <br>
-        <br>
-        <br>
-        <button>Enviar</button>
-    </form>
-    
-    <h2>Endereço Gen</h2>
-    <p>R. Cônego Eugênio Leite, 623, andar 2 </p>
-    <p>Pinheiros, São Paulo - SP</p>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.1353082312467!2d-46.68338588502216!3d-23.563583384681895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce579d45a95e2d%3A0x7608344a890bcfd0!2sR.%20C%C3%B4nego%20Eug%C3%AAnio%20Leite%2C%20623%20-%20ANDAR%202%20-%20Pinheiros%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2005414-011!5e0!3m2!1spt-BR!2sbr!4v1623862686736!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <main>
+        <h1 class="center">Entre em Contato Comigo</h1>
+        <div class="container">
+            <div>
+                <form>
+                    <label for="nome">Nome</label>
+                    <input type="text" id="nome">
+                    <br>
+                    <br>
+                    <br>
+                    <label for="email">Email</label>
+                    <input type="email" id="email">
+                    <br>
+                    <br>
+                    <br>
+                    <label for="assunto">Assunto</label>
+                    <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
+                    <br>
+                    <br>
+                    <br>
+                    <button>Enviar</button>
+                </form>
+            </div>
 
+
+            <div class="margin-left-50">
+                <h2 class="center">Endereço da Gen</h2>
+                <p>R. Cônego Eugênio Leite, 623, andar 2 </p>
+                <p>Pinheiros, São Paulo - SP</p>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.1353082312467!2d-46.68338588502216!3d-23.563583384681895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce579d45a95e2d%3A0x7608344a890bcfd0!2sR.%20C%C3%B4nego%20Eug%C3%AAnio%20Leite%2C%20623%20-%20ANDAR%202%20-%20Pinheiros%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2005414-011!5e0!3m2!1spt-BR!2sbr!4v1623862686736!5m2!1spt-BR!2sbr"
+                    width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </div>
+    </main>
+    <hr>
+    <footer>
+        <div class="container">
+            <a href="https://www.linkedin.com/in/angelo-ruggiero-arcangelo/" target="_blank"><img
+                    class="tamanho-logos padding-10" src="assets/img/linkedin.png" alt="Logo do Linkedin"></a>
+            <a href="https://github.com/ArcangeloAR" target="_blank"><img class="tamanho-logos padding-10"
+                    src="assets/img/github.png" alt="Logo do Github"></a>
+        </div>
+        <p class="center">
+            Todos os direitos reservados &copy;
+        </p>
+    </footer>
 </body>
 </html>
