Feat. Fundamentos Web - JS

--- a/Bloco III/Fundamentos Web/Exercicios16-170621/contato.html
+++ b/Bloco III/Fundamentos Web/Exercicios16-170621/contato.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <header>
         <ul id="menu">
             <li><a href="index.html">Home</a></li>
@@ -23,21 +24,21 @@
             <div>
                 <form>
                     <label for="nome">Nome</label>
-                    <input type="text" id="nome">
-                    <br>
+                    <input type="text" id="nome" onkeyup="validaNome()">
+                    <div id="txtNome"></div>
                     <br>
                     <br>
                     <label for="email">Email</label>
-                    <input type="email" id="email">
-                    <br>
+                    <input type="email" id="email" onkeyup="validaEmail()">
+                    <div id="txtEmail"></div>
                     <br>
                     <br>
                     <label for="assunto">Assunto</label>
-                    <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
+                    <textarea name="assunto" id="assunto" cols="60" rows="5" onkeyup="validaAssunto()"></textarea>
+                    <div id="txtAssunto"></div>
                     <br>
                     <br>
-                    <br>
-                    <button>Enviar</button>
+                    <button onclick="enviar()">Enviar</button>
                 </form>
             </div>
 
@@ -48,12 +49,13 @@
                 <p>Pinheiros, São Paulo - SP</p>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.1353082312467!2d-46.68338588502216!3d-23.563583384681895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce579d45a95e2d%3A0x7608344a890bcfd0!2sR.%20C%C3%B4nego%20Eug%C3%AAnio%20Leite%2C%20623%20-%20ANDAR%202%20-%20Pinheiros%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2005414-011!5e0!3m2!1spt-BR!2sbr!4v1623862686736!5m2!1spt-BR!2sbr"
-                    width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy" id="mapa" onmousemove="mapaZoom()" onmouseout="mapaNormal()"></iframe>
             </div>
         </div>
     </main>
-    <hr>
-    <footer>
+
+    <footer id="contatoFooter">
+        <hr>
         <div class="container">
             <a href="https://www.linkedin.com/in/angelo-ruggiero-arcangelo/" target="_blank"><img
                     class="tamanho-logos padding-10" src="assets/img/linkedin.png" alt="Logo do Linkedin"></a>
@@ -64,5 +66,9 @@
             Todos os direitos reservados &copy;
         </p>
     </footer>
+
+    <script src="assets/js/script.js"></script>
+
 </body>
+
 </html>
